@@ -161,7 +161,7 @@ module DispatcherTest
 
   class AbstractController < ActionController::Base
     def generate_wsdl
-      @request ||= ::ActionController::TestRequest.new
+      self.request ||= ::ActionController::TestRequest.new
       to_wsdl
     end
   end
